--- a/.github/workflows/elixir.yml
+++ b/.github/workflows/elixir.yml
@@ -7,21 +7,22 @@ on:
   pull_request:
     branches:
       - master
-
 permissions:
   contents: read
-
+env:
+  ELIXIR_VERSION: "1.12.3"
+  OTP_VERSION: "24.1"
 jobs:
   build:
-    name: Build and test
-    runs-on: ubuntu-20.04
+    name: Build and Test
+    runs-on: ubuntu-22.04
     steps:
       - uses: actions/checkout@v3
       - name: Set up Elixir
         uses: erlef/setup-beam@988e02bfe678367a02564f65ca2e37726dc0268f
         with:
-          elixir-version: '1.12.3' # Define the elixir version [required]
-          otp-version: '24.1' # Define the OTP version [required]
+          elixir-version: ${{ env.ELIXIR_VERSION }}
+          otp-version: ${{ env.OTP_VERSION }}
       - name: Restore dependencies cache
         uses: actions/cache@v3
         with:
